<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/im_order_type_image_detail_icon"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/image"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tv_type_order_title_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/WhiteSmoke"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/DarkBlue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_type_order_description_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/AntiqueWhite"
        android:padding="8dp"
        android:textColor="@color/DarkBlue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_type_order_price_string_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/Gray"
        android:gravity="start"
        android:padding="8dp"
        android:textColor="@color/Black"
        android:text="@string/type_order_price_string"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_type_order_price_value_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:gravity="end"
        android:padding="8dp"
        android:textColor="@color/OrangeRed"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/tv_type_order_remarks_edit_text_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:hint="@string/type_order_remarks_edit_text_string"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@style/QuantityPickerButtonStyle"
            android:onClick="decrementitemquantity"
            android:text="@string/btn_order_quantity_decrement" />

        <TextView
            android:id="@+id/quantity_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/qtylabel"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_type_order_quantity_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            style="@style/QuantityPickerButtonStyle"
            android:onClick="incrementitemquantity"
            android:text="@string/btn_order_quantity_increment" />

        <TextView
            android:id="@+id/tv_type_order_quantity_detail_subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_type_order_add_button_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onclickAddOrderToCartButton"
        android:text="@string/type_order_add_button_string"
        android:padding="12dp" />

</LinearLayout>