<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        style="@style/QuantityPickerButtonStyle"
        android:onClick="decrementitemquantity"
        android:text="@string/btn_order_quantity_decrement" />

    <TextView
        android:id="@+id/quantity_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/qtylabel"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_type_order_quantity_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        style="@style/QuantityPickerButtonStyle"
        android:onClick="incrementitemquantity"
        android:text="@string/btn_order_quantity_increment" />

    <TextView
        android:id="@+id/tv_type_order_quantity_detail_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="14sp" />

</LinearLayout>